--- a/api-gateway/src/main/resources/bootstrap.yml
+++ b/api-gateway/src/main/resources/bootstrap.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: customer-service
+    name: api-gateway
   cloud:
     config:
       uri: ${CONFIG_SERVER_URL:http://localhost:8080/}
