--- a/order-service/src/main/resources/bootstrap.yml
+++ b/order-service/src/main/resources/bootstrap.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: customer-service
+    name: order-service
   cloud:
     config:
       uri: ${CONFIG_SERVER_URL:http://localhost:8080/}
