--- a/service-registry/src/main/resources/bootstrap.yml
+++ b/service-registry/src/main/resources/bootstrap.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: customer-service
+    name: service-registry
   cloud:
     config:
       uri: ${CONFIG_SERVER_URL:http://localhost:8080/}
